<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditClientActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="50dp"
        app:titleTextColor="@color/white"
        app:contentInsetStart="0dp"
        app:title="Edit client"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_cancel_edit"
                android:id="@+id/img_close_edit_client"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:textSize="20sp"
                android:text="@string/edit_client"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_close_edit_client"/>


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ic_apple_edit"
                android:src="@drawable/ic_apply_edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_client"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/person"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_description"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/hint_name"
        android:id="@+id/input_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        style="@style/create_client_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_client" />

    <EditText
        android:hint="@string/hint_surname"
        android:id="@+id/input_surname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        style="@style/create_client_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name" />

    <EditText
        android:hint="@string/hint_birth_date"
        android:id="@+id/input_birth_date"
        android:importantForAutofill="no"
        android:inputType="text"
        style="@style/create_client_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_surname" />

    <EditText
        android:hint="@string/hint_email"
        android:id="@+id/input_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        style="@style/create_client_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_birth_date" />

    <EditText
        android:inputType="text"
        android:hint="@string/hint_instagram"
        android:id="@+id/input_instagram"
        android:importantForAutofill="no"
        style="@style/create_client_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email" />

    <EditText
        android:inputType="phone"
        android:hint="@string/hint_phone"
        android:id="@+id/input_phone"
        android:importantForAutofill="no"
        style="@style/create_client_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_instagram" />

    <EditText
        android:hint="@string/hint_whastsapp"
        android:inputType="phone"
        android:id="@+id/input_whatsapp"
        android:importantForAutofill="no"
        style="@style/create_client_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>